# planetarium_glfw_cpp

./: CMakeLists.txt  LICENSE  README.md  mesh.cpp  mesh.hpp  planetarium.cpp
glad/: gl.h  glad.c  glad.h
models/: rectangle.blend  rectangle.blend1  rectangle.mtl  sphere.blend  sphere.blend1  tetrahedron.blend  tetrahedron.blend1  tetrahedron.mtl  triangle.blend  triangle.blend1  triangle.mtl
